<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment" >

    <org.opencv.android.JavaCameraView
        android:id="@+id/camera_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />

    <View
        android:id="@+id/view_shootingActive"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="-16dp"
        android:background="#80000000"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnStop" />

    <TextView
        android:id="@+id/shotsMade_home"
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:textAlignment="center"
        android:textColor="@color/accent"
        android:textSize="32sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintStart_toEndOf="@+id/btnStop"
        app:layout_constraintTop_toTopOf="@+id/view_shootingActive" />

    <TextView
        android:id="@+id/shotsMissed_home"
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:textAlignment="center"
        android:textColor="@color/accent"
        android:textSize="32sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/shotsMade_home" />

    <TextView
        android:id="@+id/shotsMissedLabel_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:labelFor="@id/shotsMissed"
        android:text="@string/shots_missed"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="italic"
        android:visibility="gone"
        app:autoSizeMaxTextSize="28sp"
        app:autoSizeMinTextSize="22sp"
        app:layout_constraintEnd_toEndOf="@+id/shotsMissed_home"
        app:layout_constraintStart_toStartOf="@+id/shotsMissed_home"
        app:layout_constraintTop_toBottomOf="@+id/shotsMissed_home" />

    <TextView
        android:id="@+id/shotsMadeLabel_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:labelFor="@id/shotsMade"
        android:text="Shots Made"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="italic"
        android:visibility="gone"
        app:autoSizeMaxTextSize="28sp"
        app:autoSizeMinTextSize="22sp"
        app:layout_constraintEnd_toEndOf="@+id/shotsMade_home"
        app:layout_constraintStart_toStartOf="@+id/shotsMade_home"
        app:layout_constraintTop_toBottomOf="@+id/shotsMade_home" />

    <Button
        android:id="@+id/btnStop"
        android:layout_width="149dp"
        android:layout_height="67dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/accent"
        android:text="@string/HomeShootingButton_Stop"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView_Instructions"
        android:layout_width="0dp"
        android:layout_height="225dp"
        android:layout_marginStart="75dp"
        android:layout_marginEnd="75dp"
        android:layout_marginBottom="100dp"
        android:text="@string/InstructionsText"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/btnStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_Title" />

    <Button
        android:id="@+id/btnStart"
        android:layout_width="280dp"
        android:layout_height="90dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/accent"
        android:text="@string/HomeShootingButton_Start"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView_Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/InstructionsTitle"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/styleLine"
        style="@style/HorizontalDivider"
        android:layout_width="180dp"
        android:layout_height="4dp"
        android:background="@color/accent"
        app:layout_constraintEnd_toEndOf="@+id/textView_Title"
        app:layout_constraintStart_toStartOf="@+id/textView_Title"
        app:layout_constraintTop_toBottomOf="@+id/textView_Title" />

</androidx.constraintlayout.widget.ConstraintLayout>